<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Candy</string>
    <string name="search_hint">Search Images </string>
    <string name="title_activity_image_display">Image Display</string>
 	<string name="toast_nw_unavailable">Network connection is not available</string>
 	<string name="toast_search_in_progress">Searching : </string>
 	<string name="toast_file_downloaded_at">Downloads : </string>
 	<string name="img_prefix">Image_Candy_</string>
 	
    <string-array name="imgsizes">
        <item>Any</item>
        <item>Icon</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
        <item>XXLarge</item>
        <item>Huge</item>
    </string-array>
    
    <string-array name="imgcolors">
        <item>Any</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
	</string-array>
     <string-array name="imgtypes">
         <item>Any</item>
         <item>Face</item>
         <item>Photo</item>
         <item>Clipart</item>
         <item>Lineart</item>
     </string-array>
     <string-array name="imgfileTypes">
            <item>Any</item>
            <item>jpg</item>
            <item>png</item>
            <item>gif</item>
            <item>bmp</item>
     </string-array>
            <string name="size_">Size:</string>
            <string name="color_">Color:</string>
            <string name="filetype_">FileType:</string>
            <string name="type_">Type:</string>
            <string name="site_">Site:</string>
            <string name="cancle">Cancle</string>
            <string name="search">Search</string>
            <string name="filter">Filter</string>
            <string name="share">Share</string>
            <string name="download">Download</string>
     
     
</resources>