<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/imageSize_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="96dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/size_" />

        <!-- Using 0dp for better performance -->
        <Spinner
            android:id="@+id/spinner_imageSize"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/imgsizes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageColor_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="96dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/color_" />

        <Spinner
            android:id="@+id/spinner_imageColor"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/imgcolors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageFileType_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="96dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/filetype_" />

        <Spinner
            android:id="@+id/spinner_imageFileType"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/imgfileTypes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageType_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="96dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/type_" />

        <Spinner
            android:id="@+id/spinner_imageType"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/imgtypes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageSite_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="96dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/site_" />

        <EditText
            android:id="@+id/et_site"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/cancle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/search"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>